{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Movement",
            "id": "48a0cb44-6737-4e38-b684-8645afafda84",
            "actions": [
                {
                    "name": "WalkL",
                    "type": "Button",
                    "id": "6ded747e-1e14-412d-ab5e-8d5b3b33c98a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "WalkR",
                    "type": "Button",
                    "id": "f337d391-e060-413f-8d83-f7eaf37a217f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "26750ebb-02a0-4f77-8765-42025b876982",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "ae88ca1e-6e0e-42e0-95ce-e19569cc0c80",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1576802f-568f-495d-8df0-3a09f90b1479",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3532621e-d9e4-4851-9d0c-668651fb785a",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e54800a4-4245-40bb-949a-d4c2e2640587",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "83ec7647-5a37-40be-8af0-90a7786d0948",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkR",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "0e1e2b2f-4613-4672-9231-f76b523b4c17",
            "actions": [
                {
                    "name": "Settings",
                    "type": "Button",
                    "id": "7ca48a7b-7202-4c56-8bc4-283869c4c538",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2043b01a-14cf-43bb-ae4f-7bff8df9dd3a",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Settings",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Console",
            "id": "a89c3590-fc35-4df6-807a-b79b048b9aa8",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "e8b23b39-bf05-452a-8755-3788f45be88a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b48a6534-04b8-4263-91c3-83d3b258e658",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}